--- a/css/styles.css
+++ b/css/styles.css
@@ -548,6 +548,16 @@ margin-right: 30px;
         .join-soc-link:focus .join-soc-icon {
             fill: #FFFFFF;
         }
+        .footer-form{
+        margin-bottom: 20px;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.7;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        }
+        .footer-field .
         /* модальне вікно*/
         .backdrop{
             position: fixed;
@@ -630,7 +640,7 @@ margin-right: 30px;
         border-color: red;
     }*/
     .modal-label{
-font-family: Roboto,sans-serif;
+font-family: Roboto, sans-serif;
 font-weight: 400;
 font-size: 12px;
 line-height: 1.7;
@@ -662,17 +672,32 @@ text-align: left;
         border: 2px solid #212121;
         border-radius: 15%;
     }
-    .checkbox-svg{
-      position: absolute;  
-      width: 16px;
-      height: 16px;
-      left: 0;
-      top: 0;
-      fill: #FFFFFF;
-      opacity: 0.1;
-    }
-    .checkbox:checked~.checkbox-svg{
-        fill: #2196F3;
+   
+   .icon-check{
+       position: absolute;
+       width: 16px;
+       height: 15px;
+       top: 50%;
+       left: 0;
+       transform: translate(-50%);
+       display: inline-block;
+       justify-content: center;
+       align-items: center;
+       border: 2px solid var(--main-title-color);
+       border-radius: 2x;
+    background-image: url(../images/check.svg);
+
+
+   }
+    .checkbox:checked + .icon-check{
+        width:16px ;
+        height: 15px;
+        top: 50%;
+        left: 0;
+        border:2px solid var(--accsent-color);
+        border-radius: 2px;
+        background-color: var(--accsent-color);
+        
         opacity: 1;
     }
     .button-license{
