--- a/css/styles.css
+++ b/css/styles.css
@@ -710,13 +710,12 @@ text-align: left;
     }
    
    .icon-check{
+       display:flex ;
        position: relative;
        width: 16px;
        height: 15px;
        top: 50%;
        left: 0;
-      /* transform: translate(-50%);*/
-       display: flex;
        justify-content: center;
        align-items: center;
        border: 2px solid var(--main-title-color);
@@ -738,14 +737,18 @@ text-align: left;
     }
     .button-license{
     display: inline-block;
+    position: relative;
     padding: 10px 32px;
     font-family: Roboto, sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.8;
+    width: 200px;
+    height: 50px;
     color: var(--hero-title-color);
     background-color: var(--accsent-color);
     border: 1px solid transparent;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     }
     .form-icon{
