--- a/css/styles.css
+++ b/css/styles.css
@@ -606,6 +606,10 @@ margin-right: 30px;
             justify-content: center;
            background-color: var(--accsent-color);
         }
+    .footer-input:placeholder-shown{
+        color: rgba(255, 255, 255, 0.6);
+        padding-left: 16px;
+    }
         /* модальне вікно*/
         .backdrop{
             position: fixed;
