--- a/css/styles.css
+++ b/css/styles.css
@@ -594,8 +594,11 @@ margin-right: 30px;
             color: #FFFFFF;
             background: #2196F3;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-           border-radius: 4px;}
-   
+           border-radius: 4px;
+           border: none;
+        }
+        
+  
         .add-icon{
             position: absolute;
             margin-left: 10px;
@@ -604,7 +607,12 @@ margin-right: 30px;
             justify-content: center;
            background-color: var(--accsent-color);
         }
-    .footer-input:placeholder-shown{
+    .footer-input:placeholder-shown,
+    .footer-input:focus-visible{
+        font-size: 16px;
+        line-height: 1.25;
+        align-items: center;
+        letter-spacing: 0.03em;
         color: rgba(255, 255, 255, 0.6);
         padding-left: 16px;
     }
@@ -673,7 +681,7 @@ margin-right: 30px;
         letter-spacing: 0.03em;
        color: var(--main-title-color);
        text-align: center;
-       margin-bottom: 30px;
+       margin-bottom: 12px;
     }
     input.modal-input{
         width: 100%;
@@ -763,13 +771,22 @@ text-align: left;
    
     .modal-text{
     width: 100%;
-    height: 100%;
+    height: 120px;
     border: 1px solid #757575;
     border-radius: 4px;
     margin-bottom: 10px;
     padding: 12px 16px;
     resize: none;
     
+    }
+    .modal-text::placeholder,
+    .modal-text:focus-visible{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.7;
+        letter-spacing: 0.01em;
+        
+        color: rgba(117, 117, 117, 0.5);
     }
     /*.checkbox{
         appearance: none;
