--- a/css/styles.css
+++ b/css/styles.css
@@ -457,7 +457,6 @@ margin-right: 30px;
             display: flex;
         }
         .footer-logo{
-            margin-bottom: 20px;
             font-family: 'Raleway';
             font-style: normal;
             font-weight: 700;
@@ -465,6 +464,9 @@ margin-right: 30px;
             line-height: 1.9;
             letter-spacing: 0.03em;
              color: #2196F3;
+        }
+        .footer-list{
+            padding-top: 20px;
         }
         address {
             font-style: normal;
@@ -550,7 +552,6 @@ margin-right: 30px;
         }
         .online{
             margin-left: 93px;
-            padding-bottom: 94px;
             flex-grow: 1;
         }
         .online-title {
@@ -668,17 +669,17 @@ margin-right: 30px;
             border: 1px solid rgba(0, 0, 0, 0.1);
         }   
                 .modal-close-btn:hover .modal-close-icon{
-                    color: #2196F3;
+                    fill: #2196F3;
                 }
-        .modal-close-icon:hover{
+        .modal-close-btn:hover{
             fill: #2196F3
         }
-                .modal-close-btn:focus .modal-close-icon {
+                .modal-close-btn:focus .modal-close-icon{
                     color: #2196F3;
                 }
-        .modal-close-icon:focus{
+        .modal-close-btn:focus{
             
-            fill: #2196F3
+            color;: #2196F3
         }
     .is-hidden{
         opacity: 0;
@@ -697,8 +698,8 @@ margin-right: 30px;
     }
     input.modal-input{
         width: 100%;
-        height: 45px;
-        border: 1px solid #757575;
+        height: 40px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
         border-radius: 4px;
         padding-left: 42px;
         outline: none;/*відключає підсвічування форми щоб задати ховер та фокус*/
